lib/src/bindings.dart


  late final _ndarray_igetPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ndarray>, ffi.Int64,
              ffi.Pointer<ffi.Void>)>>('ndarray_iget');
  late final _ndarray_iget = _ndarray_igetPtr.asFunction<
      int Function(ffi.Pointer<ndarray>, int, ffi.Pointer<ffi.Void>)>();

  /// Returns a double-precision floating-point ndarray data element located at a
  /// specified linear index.
  int ndarray_iget_float64(
    ffi.Pointer<ndarray> arr,
    int idx,
    ffi.Pointer<ffi.Double> out,
  ) {
    return _ndarray_iget_float64(
      arr,
      idx,
      out,
    );
  }

  late final _ndarray_iget_float64Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ndarray>, ffi.Int64,
              ffi.Pointer<ffi.Double>)>>('ndarray_iget_float64');
  late final _ndarray_iget_float64 = _ndarray_iget_float64Ptr.asFunction<
      int Function(ffi.Pointer<ndarray>, int, ffi.Pointer<ffi.Double>)>();

  /// Returns a single-precision floating-point ndarray data element located at a
  /// specified linear index.
  int ndarray_iget_float32(
    ffi.Pointer<ndarray> arr,
    int idx,
    ffi.Pointer<ffi.Float> out,
  ) {
    return _ndarray_iget_float32(
      arr,
      idx,
      out,
    );
  }

  late final _ndarray_iget_float32Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ndarray>, ffi.Int64,
              ffi.Pointer<ffi.Float>)>>('ndarray_iget_float32');
  late final _ndarray_iget_float32 = _ndarray_iget_float32Ptr.asFunction<
      int Function(ffi.Pointer<ndarray>, int, ffi.Pointer<ffi.Float>)>();

  /// Returns an unsigned 64-bit integer ndarray data element located at a
  /// specified linear index.
  int ndarray_iget_uint64(
    ffi.Pointer<ndarray> arr,
    int idx,
    ffi.Pointer<ffi.Uint64> out,
  ) {
    return _ndarray_iget_uint64(
      arr,
      idx,
      out,
    );
  }

  late final _ndarray_iget_uint64Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ndarray>, ffi.Int64,
              ffi.Pointer<ffi.Uint64>)>>('ndarray_iget_uint64');
  late final _ndarray_iget_uint64 = _ndarray_iget_uint64Ptr.asFunction<
      int Function(ffi.Pointer<ndarray>, int, ffi.Pointer<ffi.Uint64>)>();

  /// Returns a signed 64-bit integer ndarray data element located at a specified
  /// linear index.
  int ndarray_iget_int64(
    ffi.Pointer<ndarray> arr,
    int idx,
    ffi.Pointer<ffi.Int64> out,
  ) {
    return _ndarray_iget_int64(
      arr,
      idx,
      out,
    );
  }

  late final _ndarray_iget_int64Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ndarray>, ffi.Int64,
              ffi.Pointer<ffi.Int64>)>>('ndarray_iget_int64');
  late final _ndarray_iget_int64 = _ndarray_iget_int64Ptr.asFunction<
      int Function(ffi.Pointer<ndarray>, int, ffi.Pointer<ffi.Int64>)>();

  /// Returns an unsigned 32-bit integer ndarray data element located at a
  /// specified linear index.
  int ndarray_iget_uint32(
    ffi.Pointer<ndarray> arr,
    int idx,
    ffi.Pointer<ffi.Uint32> out,
  ) {
    return _ndarray_iget_uint32(
      arr,
      idx,
      out,
    );
  }

  late final _ndarray_iget_uint32Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ndarray>, ffi.Int64,
              ffi.Pointer<ffi.Uint32>)>>('ndarray_iget_uint32');
  late final _ndarray_iget_uint32 = _ndarray_iget_uint32Ptr.asFunction<
      int Function(ffi.Pointer<ndarray>, int, ffi.Pointer<ffi.Uint32>)>();

  /// Returns a signed 32-bit integer ndarray data element located at a specified
  /// linear index.
  int ndarray_iget_int32(
    ffi.Pointer<ndarray> arr,
    int idx,
    ffi.Pointer<ffi.Int32> out,
  ) {
    return _ndarray_iget_int32(
      arr,
      idx,
      out,
    );
  }

  late final _ndarray_iget_int32Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ndarray>, ffi.Int64,
              ffi.Pointer<ffi.Int32>)>>('ndarray_iget_int32');
  late final _ndarray_iget_int32 = _ndarray_iget_int32Ptr.asFunction<
      int Function(ffi.Pointer<ndarray>, int, ffi.Pointer<ffi.Int32>)>();

  /// Returns an unsigned 16-bit integer ndarray data element located at a
  /// specified linear index.
  int ndarray_iget_uint16(
    ffi.Pointer<ndarray> arr,
    int idx,
    ffi.Pointer<ffi.Uint16> out,
  ) {
    return _ndarray_iget_uint16(
      arr,
      idx,
      out,
    );
  }

  late final _ndarray_iget_uint16Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ndarray>, ffi.Int64,
              ffi.Pointer<ffi.Uint16>)>>('ndarray_iget_uint16');
  late final _ndarray_iget_uint16 = _ndarray_iget_uint16Ptr.asFunction<
      int Function(ffi.Pointer<ndarray>, int, ffi.Pointer<ffi.Uint16>)>();

  /// Returns a signed 16-bit integer ndarray data element located at a specified
  /// linear index.
  int ndarray_iget_int16(
    ffi.Pointer<ndarray> arr,
    int idx,
    ffi.Pointer<ffi.Int16> out,
  ) {
    return _ndarray_iget_int16(
      arr,
      idx,
      out,
    );
  }

  late final _ndarray_iget_int16Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ndarray>, ffi.Int64,
              ffi.Pointer<ffi.Int16>)>>('ndarray_iget_int16');
  late final _ndarray_iget_int16 = _ndarray_iget_int16Ptr.asFunction<
      int Function(ffi.Pointer<ndarray>, int, ffi.Pointer<ffi.Int16>)>();

  /// Returns an unsigned 8-bit integer ndarray data element located at a specified
  /// linear index.
  int ndarray_iget_uint8(
    ffi.Pointer<ndarray> arr,
    int idx,
    ffi.Pointer<ffi.Uint8> out,
  ) {
    return _ndarray_iget_uint8(
      arr,
      idx,
      out,
    );
  }

  late final _ndarray_iget_uint8Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ndarray>, ffi.Int64,
              ffi.Pointer<ffi.Uint8>)>>('ndarray_iget_uint8');
  late final _ndarray_iget_uint8 = _ndarray_iget_uint8Ptr.asFunction<
      int Function(ffi.Pointer<ndarray>, int, ffi.Pointer<ffi.Uint8>)>();

  /// Returns a signed 8-bit integer ndarray data element located at a specified
  /// linear index.
  int ndarray_iget_int8(
    ffi.Pointer<ndarray> arr,
    int idx,
    ffi.Pointer<ffi.Int8> out,
  ) {
    return _ndarray_iget_int8(
      arr,
      idx,
      out,
    );
  }

  late final _ndarray_iget_int8Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ndarray>, ffi.Int64,
              ffi.Pointer<ffi.Int8>)>>('ndarray_iget_int8');
  late final _ndarray_iget_int8 = _ndarray_iget_int8Ptr.asFunction<
      int Function(ffi.Pointer<ndarray>, int, ffi.Pointer<ffi.Int8>)>();

  /// Returns a double-precision complex floating-point ndarray data element
  /// located at a specified linear index.
  int ndarray_iget_complex128(
    ffi.Pointer<ndarray> arr,
    int idx,
    ffi.Pointer<ndarray_complex128_t> out,
  ) {
    return _ndarray_iget_complex128(
      arr,
      idx,
      out,
    );
  }

  late final _ndarray_iget_complex128Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ndarray>, ffi.Int64,
              ffi.Pointer<ndarray_complex128_t>)>>('ndarray_iget_complex128');
  late final _ndarray_iget_complex128 = _ndarray_iget_complex128Ptr.asFunction<
      int Function(
          ffi.Pointer<ndarray>, int, ffi.Pointer<ndarray_complex128_t>)>();

  /// Returns a single-precision complex floating-point ndarray data element
  /// located at a specified linear index.
  int ndarray_iget_complex64(
    ffi.Pointer<ndarray> arr,
    int idx,
    ffi.Pointer<ndarray_complex64_t> out,
  ) {
    return _ndarray_iget_complex64(
      arr,
      idx,
      out,
    );
  }

  late final _ndarray_iget_complex64Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ndarray>, ffi.Int64,
              ffi.Pointer<ndarray_complex64_t>)>>('ndarray_iget_complex64');
  late final _ndarray_iget_complex64 = _ndarray_iget_complex64Ptr.asFunction<
      int Function(
          ffi.Pointer<ndarray>, int, ffi.Pointer<ndarray_complex64_t>)>();

  /// Returns a boolean ndarray data element located at a specified linear index.
  int ndarray_iget_bool(
    ffi.Pointer<ndarray> arr,
    int idx,
    ffi.Pointer<ffi.Bool> out,
  ) {
    return _ndarray_iget_bool(
      arr,
      idx,
      out,
    );
  }

  late final _ndarray_iget_boolPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ndarray>, ffi.Int64,
              ffi.Pointer<ffi.Bool>)>>('ndarray_iget_bool');
  late final _ndarray_iget_bool = _ndarray_iget_boolPtr.asFunction<
      int Function(ffi.Pointer<ndarray>, int, ffi.Pointer<ffi.Bool>)>();

  /// Returns a pointer in the underlying byte array for an ndarray data element
  /// located at a specified linear index.
  ffi.Pointer<ffi.Uint8> ndarray_iget_ptr(
    ffi.Pointer<ndarray> arr,
    int idx,
  ) {
    return _ndarray_iget_ptr(
      arr,
      idx,
    );
  }

  late final _ndarray_iget_ptrPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Uint8> Function(
              ffi.Pointer<ndarray>, ffi.Int64)>>('ndarray_iget_ptr');
  late final _ndarray_iget_ptr = _ndarray_iget_ptrPtr
      .asFunction<ffi.Pointer<ffi.Uint8> Function(ffi.Pointer<ndarray>, int)>();

  /// Sets an ndarray data element.
  int ndarray_set(
    ffi.Pointer<ndarray> arr,
    ffi.Pointer<ffi.Int64> sub,
    ffi.Pointer<ffi.Void> v,
  ) {
    return _ndarray_set(
      arr,
      sub,
      v,
    );
  }

  late final _ndarray_setPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ndarray>, ffi.Pointer<ffi.Int64>,
              ffi.Pointer<ffi.Void>)>>('ndarray_set');
  late final _ndarray_set = _ndarray_setPtr.asFunction<
      int Function(ffi.Pointer<ndarray>, ffi.Pointer<ffi.Int64>,
          ffi.Pointer<ffi.Void>)>();

  /// Sets a double-precision floating-point ndarray data element.
  int ndarray_set_float64(
    ffi.Pointer<ndarray> arr,
    ffi.Pointer<ffi.Int64> sub,
    double v,
  ) {
    return _ndarray_set_float64(
      arr,
      sub,
      v,
    );
  }

  late final _ndarray_set_float64Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ndarray>, ffi.Pointer<ffi.Int64>,
              ffi.Double)>>('ndarray_set_float64');
  late final _ndarray_set_float64 = _ndarray_set_float64Ptr.asFunction<
      int Function(ffi.Pointer<ndarray>, ffi.Pointer<ffi.Int64>, double)>();

  /// Sets a single-precision floating-point ndarray data element.
  int ndarray_set_float32(
    ffi.Pointer<ndarray> arr,
    ffi.Pointer<ffi.Int64> sub,
    double v,
  ) {
    return _ndarray_set_float32(
      arr,
      sub,
      v,
    );
  }

  late final _ndarray_set_float32Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ndarray>, ffi.Pointer<ffi.Int64>,
              ffi.Float)>>('ndarray_set_float32');
  late final _ndarray_set_float32 = _ndarray_set_float32Ptr.asFunction<
      int Function(ffi.Pointer<ndarray>, ffi.Pointer<ffi.Int64>, double)>();

  /// Sets an unsigned 64-bit integer ndarray data element.
  int ndarray_set_uint64(
    ffi.Pointer<ndarray> arr,
    ffi.Pointer<ffi.Int64> sub,
    int v,
  ) {
    return _ndarray_set_uint64(
      arr,
      sub,
      v,
    );
  }

  late final _ndarray_set_uint64Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ndarray>, ffi.Pointer<ffi.Int64>,
              ffi.Uint64)>>('ndarray_set_uint64');
  late final _ndarray_set_uint64 = _ndarray_set_uint64Ptr.asFunction<
      int Function(ffi.Pointer<ndarray>, ffi.Pointer<ffi.Int64>, int)>();

  /// Sets a signed 64-bit integer ndarray data element.
  int ndarray_set_int64(
    ffi.Pointer<ndarray> arr,
    ffi.Pointer<ffi.Int64> sub,
    int v,
  ) {
    return _ndarray_set_int64(
      arr,
      sub,
      v,
    );
  }
